# competitive_analysis_agent

./: .env.example  .gitignore  README.md  pyproject.toml  start.ps1  启动竞品分析Agent.bat
competitive_analysis_agent/: __init__.py  agent_hooks.py  analyst.py  api_app.py  application_workflow.py  config.py  cost_calculator.py  evaluation.py  extractor.py  health.py  live_analyst.py  live_config.py  live_extractor.py  live_planner.py  live_verifier.py  live_workflow.py  logging_config.py  model_io.py  observability.py  planner.py  pricing_utils.py  reporter.py  researcher.py  schemas.py  search.py  streamlit_app.py  ui_service.py  verifier.py  workflow.py
docs/: agent-repair-guide-api-pricing-scope.md  sample-report.md
docs/evaluation/: evaluation-results.json  evaluation-results.md
docs/resumes/: agent-development-resume-draft.md  ue5-agent-hybrid-resume-draft.md
evaluation/: README.md  cases.json
tests/: test_analyst.py  test_api_app.py  test_api_competition_scope.py  test_application_workflow.py  test_cost_calculator.py  test_evaluation.py  test_extractor.py  test_health.py  test_live_analyst.py  test_live_config.py  test_live_evaluation.py  test_live_extractor.py  test_live_model_factories.py  test_live_planner.py  test_live_search.py  test_live_ui.py  test_live_verifier.py  test_live_workflow.py  test_logging_config.py  test_model_io.py  test_observability.py  test_planner.py  test_pricing_utils.py  test_reporter.py  test_researcher.py  test_schemas.py  test_search.py  test_streamlit_app.py  test_ui_service.py  test_verifier.py  test_workflow.py
(+22 files in other folders)
